# strata-insight

./: biome.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
backend/: main.py  pyproject.toml
src/: App.tsx  index.css
src/components/: NavLink.tsx
src/components/layout/: AppLayout.tsx
src/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  carousel.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  resizable.tsx  select.tsx  sheet.tsx  sidebar.tsx  table.tsx  tabs.tsx  toast.tsx  toggle-group.tsx
src/components/ui-geo/: AnalysisCard.tsx  DataPlotter.tsx  FileUploadZone.tsx  GeoTable.tsx  SchemaMapper.tsx  index.ts
src/data/: mockData.ts
src/pages/: Index.tsx  NewProjectPage.tsx  NotFound.tsx  ProjectAnalysisPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  StandardsPage.tsx
src/test/: example.test.ts  setup.ts
supabase/: config.toml
